# stackforce-admin

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: admin.py  apps.py  models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
